<resources>
    <string name="app_name">Check Gizi</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="lupa">Lupa Password?</string>
    <string name="atau">============== Atau ==============</string>
    <string name="belum">Belum punya Akun?</string>
    <string name="sudah">Sudah punya Akun?</string>
</resources>