<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_nama_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nama" />

        <EditText
            android:id="@+id/et_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/et_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_oval"
            android:text="@string/daftar"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/sudah"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>